--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "evergreen-ui": "^5.1.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
