--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "evergreen-ui": "^5.1.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
