--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-streaming": "^1.8.0",
     "dotenv": "^8.2.0",
     "evergreen-ui": "^5.1.2",
     "lodash": "^4.17.21",
