--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-lifecycle-visualizer": "^2.2.11",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
