--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-lifecycle-visualizer": "^2.2.11",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.2",
